--- a/lab-two.html
+++ b/lab-two.html
@@ -21,7 +21,7 @@
     <section class="about">
         <h3>About Us</h3>
         <p>We are a company dedicated to providing excellent services to our customers.</p>
-        <img src="img/logo.png" alt="" width="600" height="400">
+        <img src="logo.png" alt="" width="600" height="400">
     </section>
     <section class="service">
         <h3>Our Services</h3>
@@ -29,12 +29,12 @@
             <figure class="web">
                 <h3>Web Development</h3>
                 <p>We specialize in creating responsive and user friendly websites.</p>
-                <img src="/img/web-dev.jpg" alt="" width="600" height="400">
+                <img src="web-dev.jpg" alt="" width="600" height="400">
             </figure>
             <figure class="graphic">
                 <h3>Graphic Design</h3>
                 <p>Our talented designers can bring your ideas to life with stunning visuals.</p>
-                <img src="/img/graphic-design.jpg" alt="" width="600" height="400">
+                <img src="graphic-design.jpg" alt="" width="600" height="400">
             </figure>
             
         </article>    
